2005-10-25  Christian Schaller  <set EMAIL_ADDRESS environment variable>

	reviewed by: <delete if not using a buddy>

	* gst/rtp/Makefile.am: add missing header files for disting

2005-10-25  Zeeshan Ali  <zeenix@gmail.com>

	* gst/rtp/gstrtpgsmenc.c: (gst_rtpgsmenc_get_type),
	(gst_rtpgsmenc_base_init), (gst_rtpgsmenc_class_init),
	(gst_rtpgsmenc_init), (gst_rtpgsmenc_setcaps),
	(gst_rtpgsmenc_handle_buffer):
	* gst/rtp/gstrtpgsmenc.h:
	* gst/rtp/gstrtpgsmparse.c: (gst_rtpgsmparse_get_type),
	(gst_rtpgsmparse_base_init), (gst_rtpgsmparse_class_init),
	(gst_rtpgsmparse_init), (gst_rtpgsmparse_setcaps),
	(gst_rtpgsmparse_finalize), (gst_rtpgsmparse_process):
	* gst/rtp/gstrtpgsmparse.h:
	Getting the GSM (de)payloader working and compatible with our plans for RTP.

2005-10-25  Julien MOUTTE  <julien@moutte.net>

	* ext/libpng/gstpngdec.c: (user_info_callback),
	(gst_pngdec_caps_create_and_set), (gst_pngdec_task): Push
	a newsegment event, move some redundant code in a single place.

2005-10-25  Julien MOUTTE  <julien@moutte.net>

	* ext/libpng/gstpngdec.c: (user_info_callback),
	(gst_pngdec_caps_create_and_set), (gst_pngdec_task): Temporary
	hack to get correct colors order when we have a png image with
	alpha channel.

2005-10-24  Edward Hervey  <edward@fluendo.com>

	* ext/dv/gstdvdemux.c: (gst_dvdemux_add_pads): 
	Call gst_element_no_more_pads when there will be no more pads.

2005-10-24  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstasteriskh263.c: (gst_asteriskh263_get_type),
	(gst_asteriskh263_base_init), (gst_asteriskh263_class_init),
	(gst_asteriskh263_init), (gst_asteriskh263_finalize),
	(gst_asteriskh263_chain), (gst_asteriskh263_set_property),
	(gst_asteriskh263_get_property), (gst_asteriskh263_change_state),
	(gst_asteriskh263_plugin_init):
	* gst/rtp/gstasteriskh263.h:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtph263enc.c: (gst_rtph263enc_get_type),
	(gst_rtph263enc_base_init), (gst_rtph263enc_class_init),